Tema1/src/cool/parser/CoolParser.g4
parser grammar CoolParser;

options {
    tokenVocab = CoolLexer;
}

@header{
    package cool.parser;
}

program
    :   (classes+=classDef)+ EOF
    ;

formal
    : name=NAME_ID COLON type=TYPE_ID
    ;

varDef
    : name=NAME_ID COLON type=TYPE_ID (ASSIGN init=expr)?
    ;

feature
    : name=NAME_ID LPAREN (formals+=formal (COMMA formals+=formal)*)? RPAREN COLON type=TYPE_ID LBRACE (body+=expr)* RBRACE SEMI   # funcDef
    | name=NAME_ID COLON type=TYPE_ID (ASSIGN init=expr)? SEMI                                                                     # memberDef
    ;

classDef
    : CLASS type=TYPE_ID (INHERITS parentType=TYPE_ID)? LBRACE (features+=feature)* RBRACE SEMI;

expr:
      name=NAME_ID LPAREN (params+=expr (COMMA params+=expr)*)? RPAREN                                    # implicitDispatch
    | call=expr (AT type=TYPE_ID)? DOT name=NAME_ID LPAREN (params+=expr (COMMA params+=expr)*)? RPAREN   # explicitDispatch
    | IF cond=expr THEN thenBranch=expr ELSE elseBranch=expr FI                                           # if
    | WHILE cond=expr LOOP body=expr POOL                                                                 # while
    | LBRACE (instructions+=expr SEMI)+ RBRACE                                                            # block
    | LET vars+=varDef (COMMA vars+=varDef)* IN body=expr                                                 # let
    | CASE cond=expr OF (cases+=expr)+ ESAC                                                               # case
    | name=NAME_ID COLON type=TYPE_ID CASE_BRANCH body=expr SEMI                                          # caseBranch
    | COMPLEMENT op=expr                                                                                  # complement
    | LPAREN op=expr RPAREN                                                                               # parentheses
    | NAME_ID                                                                                             # nameID
    | TYPE_ID                                                                                             # typeID
    | INTEGER                                                                                             # int
    | STRING                                                                                              # stringNode
    | BOOL                                                                                                # bool
    | NEW TYPE_ID                                                                                         # new
    | ISVOID op=expr                                                                                      # isvoid
    | left=expr MULT right=expr                                                                           # mult
    | left=expr DIV right=expr                                                                            # div
    | left=expr PLUS right=expr                                                                           # plus
    | left=expr MINUS right=expr                                                                          # minus
    | left=expr LE right=expr                                                                             # lessOrEqual
    | left=expr LT right=expr                                                                             # less
    | left=expr EQUAL right=expr                                                                          # equal
    | name=NAME_ID ASSIGN e=expr                                                                          # assign
    | NOT op=expr                                                                                         # not

    ;
